--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
     z-index: 100;
     opacity: 0;
 }
-
+canvas {
+    width: 100vw;
+    height: 100vh;
+}
 .canvas {
     width: 100vw;
     height: 100vh;
