--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-.body {
-    width: 100%;
-    height: 100%;
+.menu{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 500;
+    opacity: 0;
 }
 .lose {
     position: absolute; 
@@ -13,7 +16,7 @@
     width: 100vw;
     height: 100vh;
 }
-.canvas {
+canvas {
     width: 100vw;
     height: 100vh;
 }
